# grip

./: .gitignore  AGENTS.md  COMMANDS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  OVERVIEW.md  README.md  SECURITY.md
.github/workflows/: release.yml
docs/: COMMANDS.md  CONTRIBUTING.md  EXAMPLES.md  OVERVIEW.md  SECURITY.md
src/: audit.rs  bin_dir.rs  cache.rs  checker.rs  checksum.rs  cli.rs  error.rs  gpg.rs  installer.rs  lock_verify.rs  main.rs  output.rs  platform.rs  privilege.rs  purl.rs  sbom.rs  suggest.rs
src/adapters/: apt.rs  dnf.rs  github.rs  mod.rs  shell.rs  url.rs
src/config/: lockfile.rs  manifest.rs  mod.rs
tests/: integration_apt.rs  integration_dnf.rs  integration_github.rs  integration_shell.rs  integration_suggest.rs  integration_url.rs
tests/docker/: Dockerfile.test-apt  Dockerfile.test-dnf  Dockerfile.test-github  Dockerfile.test-shell  Dockerfile.test-url
