[package]
name = "grip"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grip"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
flate2 = "1"
bzip2 = "0.4"
tar = "0.4"
zip = "2"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
anyhow = "1"
dialoguer = "0.11"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
async-trait = "0.1"
indexmap = { version = "2", features = ["serde"] }
tempfile = "3"
futures = "0.3"
semver = "1"
serde_json = "1"
